# UglyEngineGL

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Samples/: CMakeLists.txt
Samples/t00-SimpleWindow/: CMakeLists.txt
Samples/t00-SimpleWindow/src/: main.cpp  test_application.cpp  test_application.h
Samples/t01-SimpleTriangles/: CMakeLists.txt
Samples/t01-SimpleTriangles/src/: config.h  main.cpp  test_application.cpp  test_application.h
Samples/t02-Shaders/: CMakeLists.txt
Samples/t02-Shaders/data/shaders/: inverted.frag  inverted.vert  offset.vert  posascolor.vert
Samples/t02-Shaders/src/: config.h  test_application.cpp  test_application.h
Samples/t03-Textures/: CMakeLists.txt
Samples/t03-Textures/data/shaders/: sandbox.frag  sandbox.vert  simple.frag  simple_multi.frag  simple_multi_reverse.frag
Samples/t03-Textures/src/: config.h  test_application.cpp  test_application.h
Samples/t04-Transformations/: CMakeLists.txt
Samples/t04-Transformations/data/shaders/: base.frag  base.vert
Samples/t04-Transformations/src/: config.h  test_application.cpp  test_application.h
include/: Application.h  BufferObject.h  Core.h  DisplayManager.h  Engine.h  GL.h  GuiManager.h  IndexBuffer.h  InputManager.h  Program.h  Shader.h  Task.h  TaskManager.h  Texture.h  UglyEngine.h  VertexArrays.h  VertexBuffer.h  application.h  config.h  config.h.in  core.h  display_manager.h  engine.h  imgui_manager.h  index_buffer.h  input_button.h  input_manager.h  input_state.h  program.h  renderer.h  shader.h  texture.h  vertex_arrays.h  vertex_buffer.h
src/: Application.cpp  BufferObject.cpp  DisplayManager.cpp  Engine.cpp  GL.cpp  GuiManager.cpp  IndexBuffer.cpp  InputManager.cpp  Input_manager.cpp  Program.cpp  Shader.cpp  Task.cpp  TaskManager.cpp  Texture.cpp  VertexArrays.cpp  VertexBuffer.cpp  application.cpp  display_manager.cpp  engine.cpp  imgui_manager.cpp  index_buffer.cpp  input_button.cpp  log_formatter.cpp  log_formatter.h  program.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_arrays.cpp  vertex_buffer.cpp
tests/: CMakeLists.txt
tests/t00-SimpleWindow/src/: main.cpp
tests/t01-SimpleTriangle/: CMakeLists.txt
tests/t01-SimpleTriangle/src/: Simple2Triangles2VA2ProgramTask.cpp  Simple2Triangles2VA2ProgramTask.h  Simple2Triangles2VATask.cpp  Simple2Triangles2VATask.h  Simple2TrianglesTask.cpp  Simple2TrianglesTask.h  SimpleQuadTask.cpp  SimpleQuadTask.h  SimpleTriangleTask.cpp  SimpleTriangleTask.h  TestApplication.cpp  TestApplication.h  config.h  main.cpp
tests/t02-Shaders/: CMakeLists.txt
tests/t02-Shaders/data/: simple.vert  simple_color.frag  simple_color.vert  simple_color_inverted.vert  simple_color_offset.vert  simple_color_pos.vert  simple_red.vert  simple_uniform.vert
tests/t02-Shaders/src/: MoreAttributesTask.cpp  MoreAttributesTask.h  OffsetTask.cpp  OffsetTask.h  PosAsColorTask.cpp  PosAsColorTask.h  SimpleTriangleTask.cpp  TestApplication.cpp  TestApplication.h  UniformTask.cpp  UniformTask.h  UpsideDownTask.cpp  UpsideDownTask.h  config.h  config.h.in
tests/t03-Textures/: CMakeLists.txt
tests/t03-Textures/data/shaders/: quad.frag  quad.vert  quad_adjustable.frag  quad_colored.frag  quad_colored.vert  quad_reverse.frag  simple.frag  simple.vert
tests/t03-Textures/src/: AdjustableSmileQuadTask.cpp  AdjustableSmileQuadTask.h  ColoredQuadTask.cpp  ColoredQuadTask.h  InvertedSmileQuadTask.cpp  InvertedSmileQuadTask.h  QuadTask.cpp  QuadTask.h  SmileQuadTask.cpp  SmileQuadTask.h  TestApplication.cpp  TestApplication.h  TriangleTask.cpp  TriangleTask.h  WrappingSmileQuadTask.cpp  WrappingSmileQuadTask.h  ZoomSmileQuadTask.cpp  ZoomSmileQuadTask.h  config.h  main.cpp
tests/t04-Transformations/: CMakeLists.txt
tests/t04-Transformations/data/shaders/: quad.vert
tests/t04-Transformations/src/: RotatingSmileQuadTask.cpp  RotatingSmileQuadTask.h  SmileQuadTask.cpp  SmileQuadTask.h  TestApplication.cpp  TestApplication.h  TwoSmileQuadTask.cpp  TwoSmileQuadTask.h  config.h
